# versa-orm

./: .gitattributes  .gitignore  .gitkeep  .php-cs-fixer.cache  .php-cs-fixer.dist.php  .php-cs-fixer.php  .php-version  .phpactor.json  ANALYSIS.md  CHANGELOG.md  FREEZE_TESTS_REAL.md  GEMINI.md  Makefile  QA-INTEGRATION.md  README.md  cache_test.json  composer.json  coverage-results.json  example.php  example_composer.php  feature-results.json  format-code.ps1  format-code.sh  laradumps.yaml  llms.txt  mago.toml  phpstan-baseline.neon  phpstan.neon  phpunit-mysql-test.xml  phpunit-mysql.xml  phpunit-php-compatibility.xml  phpunit-postgresql-test.xml  phpunit-postgresql.xml  phpunit-sqlite-test.xml  phpunit-sqlite.xml  phpunit.unit.xml  phpunit.xml  pint.json  psalm.xml  qa-config.json  (+13 more)
benchmark/: README.md
config/: type_mappings.json
docs/: DatabaseTestTuning_MariaDB_PostgreSQL.md  ForeignKeysAndIndexes_CompleteGuide.md  MigrationGuide_SchemaBuilder.md  PERFORMANCE_OPTIMIZATIONS_v1.3.0.md  README.md  pokio-ssl-troubleshooting.md  postgresql-ssl-config.md
example/: .htaccess  BaseModel.php  README.md  README_ErrorHandling.md  UserController.php  UserModel.php  api.php  autoload.php  index.php  (+15 more)
versaorm_cli/: .clippy.toml  Cargo.toml  compile.bat  test.json  test_simple.json
versaorm_cli/src/: advanced_sql.rs  cache.rs  connection.rs  database_specific.rs  main.rs  model.rs  query.rs  query_planner.rs  schema.rs  tests.rs  utils.rs
versaorm_cli/src/tests/: cache_tests.rs  replace_and_upsert_tests.rs  validation_tests.rs
versaorm_cli/versaorm_cli/: .clippy.toml
(+591 files in other folders)
