[package]
name = "versaorm_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "mysql", "postgres", "sqlite", "chrono" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
