[package]
name = "versaorm_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "mysql", "postgres", "sqlite", "chrono", "time", "bigdecimal", "rust_decimal" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
regex = "1.11.1"
lazy_static = "1.4"
rust_decimal = "1.37"
bigdecimal = "0.3"
base64 = "0.22"
